fix: align the buttons for `.solutions-card__card`

--- a/assets/style.css
+++ b/assets/style.css
@@ -120,6 +120,9 @@ body {
 
 .solutions-card__card {
   position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  justify-items: start;
   width: 290px;
   padding: 16px 16px 20px 16px;
   border: 1px solid rgba(211, 216, 228, 1);
@@ -421,7 +424,6 @@ body {
   text-align: center;
   color: #fff;
   padding-bottom: 30px;
-
 }
 
 .call-to-action__button-container {
@@ -810,7 +812,6 @@ body {
   .card-carousel__carousel-switch-button-container {
     justify-content: flex-start;
   }
-
 }
 
 @media (width >=768px) and (width < 992px) {
@@ -869,7 +870,6 @@ body {
     width: 26px;
     height: 26px;
   }
-
 }
 
 @media (width >=992px) and (width < 1200px) {
@@ -939,7 +939,6 @@ body {
     width: 26px;
     height: 26px;
   }
-
 }
 
 @media (width >=1200px) {
